@@ -16,7 +16,7 @@
         <string id="32052">Default bluray-device</string>   
         <string id="32053">Used directorys</string> 
         <string id="32054">Default iso-rip-directory</string> 
-        <string id="32055">Default dvd-transcode-directory</string> 
+        <string id="32055">Default dvd-transcode-h264 directory</string> 
         <string id="32056">Default bluray mkv-directory</string>
         <string id="32057">Various settings</string> 
         <string id="32058">Default ssh-command</string> 
@@ -37,7 +37,8 @@
         <string id="32073">Default master network directory</string>  
         <string id="32074">Default timeout 1: state-file</string>
         <string id="32075">Default timeout 2: chapter-dvd</string> 
-        <string id="32076">Default timeout 3: chapter-bluray</string>       
+        <string id="32076">Default timeout 3: chapter-bluray</string> 
+        <string id="32077">Default burning-transcode directory</string>      
  
 
         <!--              --> 
@@ -220,5 +221,6 @@
         <string id="33323">Error inside the active job</string>
         <string id="33324">No connection to master possible</string>
         <string id="33325">Burning and Transcode functions are disabled</string> 
+        <string id="33326">Burning and Transcode directory not found or writeable !</string> 
          
  </strings>
