@@ -111,13 +111,14 @@ Changes:
 - All shell-shell scripts do check if shell is /bin/bash. 
 - Create Folder for user-shell scripts during the execution
   of setup.sh 
-- added transcode folder for transcoding jobs.
+- added transcode folder for transcoding jobs into setup.sh
 - Added more strings including future messages. 
   (In this case the addon can allready be translated to other languages)
 - Added Transcode & Burning menu to Expert-Mode
 - Added dvd-mpeg2.sh to svn. 
 - Added User-Shell Functions menu to Expert-Mode.
 - Print release version inside the log.
+- Print mutch more logs if verbose mode is active.
 
 Fixes:
 
